--- a/accordéon/index.html
+++ b/accordéon/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="container_accordeon">
         <div class="banniere-titre">
             <h1>
                Questions Fréquentes
