--- a/php/bdd/index.html
+++ b/php/bdd/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulaires</title>
 </head>
 <body>
-    gregrerger
+
+    <form role="formulaire affichage" name="form1" method="post" action="form.php">
+        
+    </form>
+
+
 </body>
 </html>
