--- a/frontendMentor/results-summary-component/index.html
+++ b/frontendMentor/results-summary-component/index.html
@@ -38,16 +38,13 @@
 						</div>
 					</div>
 				</div>
-
-				<br>
-
-				<div>
-					Great
-				</div>
 			</section>
 
 			<section class="left-footer">
-				<div>
+				<h1 class="left-footer-title">
+					Great
+				</h1>
+				<div class="left-footer-p">
 					You scored higher than 65% of the people who have taken these tests.
 				</div>
 			</section>
@@ -74,7 +71,7 @@
 
 					<section class="right-main-element-right">
 						<section class="number">
-							<p>80 <span>/100</span></p>
+							<p>80 <span class="number-grey">/100</span></p>
 						</section>
 					</section>
 				</div>
@@ -92,7 +89,7 @@
 
 					<section class="right-main-element-right">
 						<section class="number">
-							<p>92 <span>/100</span></p>
+							<p>92 <span class="number-grey">/100</span></p>
 						</section>
 					</section>
 				</div>
@@ -110,7 +107,7 @@
 
 					<section class="right-main-element-right">
 						<section class="number">
-							<p>61 <span>/100</span></p>
+							<p>61 <span class="number-grey">/100</span></p>
 						</section>
 					</section>	
 				</div>
@@ -128,7 +125,7 @@
 
 					<section class="right-main-element-right">
 						<section class="number">
-							<p>72 <span>/100</span></p>
+							<p>72 <span class="number-grey">/100</span></p>
 						</section>
 					</section>
 				</div>
