--- a/index.html
+++ b/index.html
@@ -14,39 +14,71 @@
 
 			<section class="header">
 				<div>
-					<img src="" alt="">
+					<img src="/assets/102350268.jpg" alt="Profil picture">
 				</div>
-				<div>armanceau</div>
+
+				<div>
+					Arthur Manceau
+				</div>
+
 			</section>
 
 			<section class="main">
 				<div>
-					<a href="/accordéon/index.html">01 - Accordion</a>
+					<a href="/projects/accordéon/index.html" class="link" data-image="/assets/102350268.jpg">01 - Accordion</a>
 				</div>
 	
 				<div>
-					<a href="/bannière/index.html">02 - Banner</a>
+					<a href="/projects/bannière/index.html" class="link" data-image="/assets/icon-web.png">02 - Banner</a>
 				</div>
 	
 				<div>
-					<a href="/darkMode/index.html">03 - Dark Mode</a>
+					<a href="/projects/darkMode/index.html">03 - Dark Mode</a>
 				</div>
 	
 				<div>
-					<a href="/ws/MusicAnimation/1/index.html">04 - Music Animation</a>
+					<a href="/projects/ws/MusicAnimation/1/index.html">04 - Music Animation</a>
 				</div>
 	
 				<div>
-					<a href="/ws/AdviceGenerator/">05 - Advice Generator</a>
+					<a href="/projects/ws/AdviceGenerator/">05 - Advice Generator</a>
 				</div>
 	
 				<div>
-					<a href="/frontendMentor/results-summary-component/index.html">06 - Resulat Summary Component</a>
+					<a href="/projects/frontendMentor/results-summary-component/index.html">06 - Resulat Summary Component</a>
 				</div>
 			</section>
 
 			<section class="footer">
+				<div>
+					<a href="https://armanceau.netlify.app/" target="_blank">
+						<img src="/assets/icon-web.png" alt="Web" width="40" height="40">
+					</a>
+				</div>
 
+				<div>
+					<a href="https://dribbble.com/arrthur" target="_blank">
+						<img src="/assets/icon-dribbble.png" alt="Dribbble" width="40" height="40">
+					</a>
+				</div>
+
+				<div>
+					<a href="https://github.com/armanceau2" target="_blank">
+						<img src="/assets/icon-github.png" alt="Github" width="40" height="40">
+					</a>
+				</div>
+
+				<div>
+					<a href="https://www.linkedin.com/in/arthur-manceau-474671230/" target="_blank">
+						<img src="/assets/icon-linkedin.png" alt="Linkedin" width="40" height="40">
+					</a>
+				</div>
+
+				<div>
+					<a href="https://twitter.com/armanceau" target="_blank">
+						<img src="/assets/icon-twitter.png" alt="Twitter" width="40" height="40">
+					</a>
+				</div>
 			</section>
 
 			
@@ -54,7 +86,9 @@
 		</section>
 
 		<section class="right">
-
+			<div class="image-container">
+				<img src="" alt="" id="image-preview">
+			  </div>
 
 		</section>
 
@@ -62,4 +96,5 @@
 
 	</div>  
 </body>
+<script src="script.js"></script>
 </html>
