--- a/index.html
+++ b/index.html
@@ -12,71 +12,87 @@
 
 		<section class="left">
 
-			<section class="header">
-				<div>
-					<img src="/assets/102350268.jpg" alt="Profil picture">
+			<section class="left-header">
+				<div class="left-header_image">
+					<img src="/assets/102350268.jpg" alt="Profil picture" width="100" height="100">
 				</div>
 
 				<div>
-					Arthur Manceau
+					@armanceau
+				</div>
+
+				<div>
+					IT student
 				</div>
 
 			</section>
 
-			<section class="main">
+			<section class="left-main">
 				<div>
-					<a href="/projects/accordéon/index.html" class="link" data-image="/assets/102350268.jpg">01 - Accordion</a>
+					<a href="/projects/accordéon/index.html" class="link" data-image="/assets/img-accordion.PNG" data-caption="Accordion">
+						<span class="left-main-number">01</span> - <span class="left-main-p">Accordion</span>
+					</a>
 				</div>
 	
 				<div>
-					<a href="/projects/bannière/index.html" class="link" data-image="/assets/icon-web.png">02 - Banner</a>
+					<a href="/projects/bannière/index.html" class="link" data-image="/assets/img-banner.PNG" data-caption="Banner">
+						<span class="left-main-number">02</span> - <span class="left-main-p">Banner</span>
+					</a>
 				</div>
 	
 				<div>
-					<a href="/projects/darkMode/index.html">03 - Dark Mode</a>
+					<a href="/projects/darkMode/index.html" class="link" data-image="/assets/img-dark-mode.PNG" data-caption="Dark Mode">
+						<span class="left-main-number">03</span> - <span class="left-main-p">Dark Mode</span>
+					</a>
 				</div>
 	
 				<div>
-					<a href="/projects/ws/MusicAnimation/1/index.html">04 - Music Animation</a>
+					<a href="/projects/ws/MusicAnimation/1/index.html" class="link" data-image="/assets/img-music.PNG" data-caption="Music animation">
+						<span class="left-main-number">04</span> - <span class="left-main-p">Music Animation</span>
+					</a>
 				</div>
 	
 				<div>
-					<a href="/projects/ws/AdviceGenerator/">05 - Advice Generator</a>
+					<a href="/projects/ws/AdviceGenerator/" class="link" data-image="/assets/img-advice.PNG" data-caption="Advice generator">
+						<span class="left-main-number">05</span> - <span class="left-main-p">Advice Generator</span>
+					</a>
 				</div>
 	
 				<div>
-					<a href="/projects/frontendMentor/results-summary-component/index.html">06 - Resulat Summary Component</a>
+					<a href="/projects/frontendMentor/results-summary-component/index.html" class="link" data-image="/assets/img-result-summary.PNG" data-caption="Results summary component">
+						<span class="left-main-number">06</span> - <span class="left-main-p">Results Summary Component</span>
+					</a>
 				</div>
 			</section>
 
-			<section class="footer">
+			<section class="left-footer">
 				<div>
 					<a href="https://armanceau.netlify.app/" target="_blank">
-						<img src="/assets/icon-web.png" alt="Web" width="40" height="40">
+						<img class="left-footer-img" src="/assets/icon-web.png" alt="Web" width="40" height="40">
 					</a>
 				</div>
 
 				<div>
 					<a href="https://dribbble.com/arrthur" target="_blank">
-						<img src="/assets/icon-dribbble.png" alt="Dribbble" width="40" height="40">
+						<img class="left-footer-img" src="/assets/icon-dribbble.png" alt="Dribbble" width="40" height="40">
 					</a>
 				</div>
 
 				<div>
 					<a href="https://github.com/armanceau2" target="_blank">
-						<img src="/assets/icon-github.png" alt="Github" width="40" height="40">
+						<img class="left-footer-img" src="/assets/icon-github.png" alt="Github" width="40" height="40">
 					</a>
 				</div>
 
 				<div>
 					<a href="https://www.linkedin.com/in/arthur-manceau-474671230/" target="_blank">
-						<img src="/assets/icon-linkedin.png" alt="Linkedin" width="40" height="40">
+						<img class="left-footer-img" src="/assets/icon-linkedin.png" alt="Linkedin" width="40" height="40">
 					</a>
 				</div>
 
 				<div>
 					<a href="https://twitter.com/armanceau" target="_blank">
-						<img src="/assets/icon-twitter.png" alt="Twitter" width="40" height="40">
+						<img class="left-footer-img" src="/assets/icon-twitter.png" alt="Twitter" width="40" height="40">
 					</a>
 				</div>
 			</section>
@@ -86,10 +102,10 @@
 		</section>
 
 		<section class="right">
-			<div class="image-container">
-				<img src="" alt="" id="image-preview">
-			  </div>
-
+			<div class="right-container">
+				<div id="image-caption"></div>
+				<img src="" alt="" id="image-preview" width="800" height="auto">
+			</div>
 		</section>
 
 
