add new exercice

--- a/projects/frontendMentor/product-preview-card-component-main/index.html
+++ b/projects/frontendMentor/product-preview-card-component-main/index.html
@@ -1,36 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
+
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="style.css">
+	<title>Frontend Mentor | Product preview card component</title>
+
 </head>
 <body>
 
-  Preview
+	<div class="container">
 
-  Gabrielle Essence Eau De Parfum
+		<!-- Image side -->
+		<section class="left">
+			
+		</section>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+		<!-- Text side -->
+		<section class="right">
+			<section class="right-header">
+				<div class="right-header-title-minor">
+					PERFUME
+				</div>
+				<br>
+				<div class="right-header-title-major">
+					Gabrielle Essence Eau De Parfum
+				</div>
+			</section>
 
-  $149.99
-  $169.99
+			<section class="right-main">
+				<div>
+					A floral, solar and voluptuous <br> interpretation composed by <br> Olivier Polge, 
+					Perfumer-Creator <br> for the House of CHANEL.
+				</div>
+			</section>
 
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+			<section class="right-footer">
+				<div class="right-footer-price">
+					<div class="right-footer-price-major">
+						$149.99
+					</div>
+
+					<div class="right-footer-price-minor">
+						$169.99
+					</div>					
+				</div>
+
+				<div class="right-footer-input">
+					<svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
+					<input type="button" value="Add to Cart">
+				</div>
+
+			</section>
+
+		</section>
+
+
+	</div>
+
+	
+
+
+
+
+
+
+	
+	<!-- <div class="attribution">
+		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+		Coded by <a href="#">armanceau</a>.
+	</div> -->
+
 </body>
 </html>
