--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
 						<span class="left-main-number">06</span> - <span class="left-main-p">Results Summary Component</span>
 					</a>
 				</div>
+
+				<div>
+					<a href="/projects/frontendMentor/product-preview-card-component-main/index.html" class="link" data-image="/assets/img-product-preview.PNG" data-caption="Product preview card component">
+						<span class="left-main-number">07</span> - <span class="left-main-p">Product preview card component</span>
+					</a>
+				</div>
 			</section>
 
 			<section class="left-footer">
