--- a/projects/frontendMentor/qr-code-component-main/index.html
+++ b/projects/frontendMentor/qr-code-component-main/index.html
@@ -22,7 +22,7 @@
 	<div class="container">
 		<section class="header">
 			<div class="header-qr">
-				<img src="/projects/frontendMentor/qr-code-component-main/images/image-qr-code.png" alt="QR code image" width="300" height="300">
+				<img src="/projects/frontendMentor/qr-code-component-main/images/image-qr-code.png" alt="QR code image">
 			</div>
 		</section>
 
