--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 						<span class="left-main-number">07</span> - <span class="left-main-p">Product preview card component</span>
 					</a>
 				</div>
+
+				<div>
+					<a href="/projects/frontendMentor/qr-code-component-main/index.html" class="link" data-image="/assets/img-qr-code.PNG" data-caption="QR code component">
+						<span class="left-main-number">08</span> - <span class="left-main-p">QR code component</span>
+					</a>
+				</div>
 			</section>
 
 			<section class="left-footer">
