add challenge pokemon
ajout du challenge pokemon via une aip et un modale

--- a/projects/ws/Pokemon/index.html
+++ b/projects/ws/Pokemon/index.html
@@ -11,14 +11,14 @@
 <div class="container">
 	<div class="pokemon-container">
 		<img src="whos-that-pokemon.png" class="whos-that-pokemon">
-		<img src="" alt="" class="pokemon-image" width="300" height="300">
+		<img src="" alt="" id="pokemon-image" class="pokemon-image" width="300" height="300">
 	</div>
 	<div id="modal-1" class="modal hidden">
 		<div class="modal-body">
 			<h1>Name that Pokemon!</h1>
 			<div class="guess-form">
 				<input class="guess-value" type="text">
-				<button class="guess-submit">Submit</button>
+				<button class="guess-submit" onclick="testSubmit()">Submit</button>
 			</div>
 		</div>
 	</div>
