--- a/projects/frontendMentor/newsletter-sign-up-with-success-message-main/succes.html
+++ b/projects/frontendMentor/newsletter-sign-up-with-success-message-main/succes.html
@@ -13,24 +13,24 @@
 	<div class="succes-container">
         <section class="succes-header">
             <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
             </div>
         </section>
 
 		<section class="succes-main">
-            <div>
+            <div class="succes-main-title">
                 Thanks for subscribing!
             </div>
 
-            <div>
-                A confirmation email has been sent to ash@loremcompany.com. 
+            <div class="succes-main-p">
+                A confirmation email has been sent to <span class="succes-main-span">ash@loremcompany.com</span>. 
                 Please open it and click the button inside to confirm your subscription.
             </div>
         </section>
         
         <section class="succes-footer">
             <div>
-                <input type="button" value="Dismiss message">
+                <input class="rounded" id="dismissBtn" type="submit" value="Dismiss message">
             </div>
         </section>
 
