--- a/projects/frontendMentor/index.html
+++ b/projects/frontendMentor/index.html
@@ -29,8 +29,13 @@
             <div class="project-link">
                 <a href="/projects/frontendMentor/qr-code-component-main/index.html">Qr Code</a>
             </div>
+
             <div class="project-link">
                 <a href="/projects/frontendMentor/results-summary-component/index.html">Resultat Summary</a>
+            </div>
+
+            <div class="project-link">
+                <a href="/projects/frontendMentor/nft-preview-card-component-main/index.html">Nft preview</a>
             </div>
         </main>
 
