--- a/projects/ws/index.html
+++ b/projects/ws/index.html
@@ -27,6 +27,10 @@
             <div class="project-link">
                 <a href="/projects/ws/Pokemon/index.html">Pokemon Game</a>
             </div>
+
+            <div class="project-link">
+                <a href="/projects/ws/OtanConvert/index.html">Otan Convertissor</a>
+            </div>
         </main>
 
     </div>
