--- a/projects/frontendMentor/index.html
+++ b/projects/frontendMentor/index.html
@@ -35,7 +35,11 @@
             </div>
 
             <div class="project-link">
-                <a href="/projects/frontendMentor/nft-preview-card-component-main/index.html">Nft preview</a>
+                <a href="/projects/frontendMentor/nft-preview-card-component-main/index.html">Nft Preview</a>
+            </div>
+
+            <div class="project-link">
+                <a href="/projects/frontendMentor/profile-card-component-main/index.html">Profil Card</a>
             </div>
         </main>
 
