--- a/projects/ws/AdviceGenerator/index.html
+++ b/projects/ws/AdviceGenerator/index.html
@@ -41,7 +41,7 @@
 
             </section>
             <div class="div-input">
-                <input type="button" value="+" id="reload-button" onclick="getAdvice()"/>
+                <input type="button" value="🎲" id="reload-button" onclick="getAdvice()"/>
             </div>
         </div>
 
