--- a/projects/ws/MusicAnimation/1/index.html
+++ b/projects/ws/MusicAnimation/1/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Music Animation</title>
 </head>
-<body class="container">
-    <div class="content">
-      <div class="trait bleuClair"></div>
-      <div class="trait bleuFonce"></div>
-      <div class="trait Jaune"></div>
-      <div class="trait RougeFonce"></div>
-      <div class="trait RougeClair"></div>
-      <div class="trait RougeFonce"></div>
-      <div class="trait Jaune"></div>
-      <div class="trait bleuFonce"></div>
-      <div class="trait bleuClair"></div>
-    </div>
+<body>
+  	<div class="container">
+		<div class="content">
+			<div class="trait bleuClair"></div>
+			<div class="trait bleuFonce"></div>
+			<div class="trait Jaune"></div>
+			<div class="trait RougeFonce"></div>
+			<div class="trait RougeClair"></div>
+			<div class="trait RougeFonce"></div>
+			<div class="trait Jaune"></div>
+			<div class="trait bleuFonce"></div>
+			<div class="trait bleuClair"></div>
+		</div>
+	</div>
   </body>
 </html>
