--- a/projects/frontendMentor/index.html
+++ b/projects/frontendMentor/index.html
@@ -41,6 +41,10 @@
             <div class="project-link">
                 <a href="/projects/frontendMentor/profile-card-component-main/index.html">Profil Card</a>
             </div>
+
+            <div class="project-link">
+                <a href="/projects/frontendMentor/time-tracking-dashboard-main/">Dashboard Time</a>
+            </div>
         </main>
 
     </div>
