--- a/projects/frontendMentor/order-summary-component-main/index.html
+++ b/projects/frontendMentor/order-summary-component-main/index.html
@@ -1,30 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	
+	<title>Frontend Mentor | Order summary card</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="container">
+		<header>
 
-  Order Summary
+		</header>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+		<main>
+			<section class="main-header">
+				<h1>Order Summary</h1>
+			</section>
 
-  Annual Plan
-  $59.99/year
+			<section class="main-main">
+				You can now listen to millions of songs, audiobooks, and podcasts on any 
+  				device anywhere you like!
+			</section>
 
-  Change
+			<section class="main-footer">
+
+				<div class="main-footer-icon">
+					<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#DFE6FB"/><path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"/></g></svg>
+				</div>
+
+				<div class="main-footer-text">
+					<div class="main-footer-text-up">
+						Annual Plan
+					</div>
+
+					<div class="main-footer-text-down">
+						$59.99/year
+					</div>
+
+				</div>
+
+				<div class="main-footer-link">
+					Change
+				</div>
+				
+			</section>
+		</main>
+
+		<footer>
+
+		</footer>
+	</div>
+
+  
+
+  
+
+  
+  
+  
 
   Proceed to Payment
   Cancel Order
