--- a/projects/frontendMentor/index.html
+++ b/projects/frontendMentor/index.html
@@ -45,6 +45,10 @@
             <div class="project-link">
                 <a href="/projects/frontendMentor/time-tracking-dashboard-main/">Dashboard Time</a>
             </div>
+
+            <div class="project-link">
+                <a href="/projects/frontendMentor/order-summary-component-main/index.html">Order Summary</a>
+            </div>
         </main>
 
     </div>
