--- a/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html
+++ b/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html
@@ -34,7 +34,7 @@
             </form>
     
             <select id="region-select">
-                <option value="">Toutes les régions</option>
+                <option value="">Filter by Region</option>
                 <option value="Africa">Afrique</option>
                 <option value="Americas">Amériques</option>
                 <option value="Asia">Asie</option>
