--- a/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html
+++ b/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html
@@ -32,6 +32,8 @@
                 <input class="input-submit" type="submit" value="🍳">
                 <input type="text" id="search-input" placeholder="Search for a country ...">
             </form>
+
+            <div></div>
     
             <select id="region-select">
                 <option value="">Filter by Region</option>
