--- a/projects/frontendMentor/index.html
+++ b/projects/frontendMentor/index.html
@@ -49,6 +49,10 @@
             <div class="project-link">
                 <a href="/projects/frontendMentor/order-summary-component-main/index.html">Order Summary</a>
             </div>
+
+            <div class="project-link">
+                <a href="/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html">Countries API</a>
+            </div>
         </main>
 
     </div>
