--- a/projects/ws/index.html
+++ b/projects/ws/index.html
@@ -31,6 +31,10 @@
             <div class="project-link">
                 <a href="/projects/ws/OtanConvert/index.html">Otan Convertissor</a>
             </div>
+
+            <div class="project-link">
+                <a href="/projects/ws/InfinitePrompt/index.html">Infinite Prompt</a>
+            </div>
         </main>
 
     </div>
