--- a/projects/ws/Spotiskills/index.html
+++ b/projects/ws/Spotiskills/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpotiSkills</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="test"></div>
-        <div id="songs-container">
+    <input type="text" id="inputConnect">
+    <input type="submit" value="connect" onclick="testConnect()">
 
-        </div>
-    </div>
 </body>
 <script src="script.js"></script>
 </html>
