--- a/projects/ws/Spotiskills/home.html
+++ b/projects/ws/Spotiskills/home.html
@@ -11,11 +11,9 @@
         <div id="songs-container">
 
         </div>
-
-        <script>
-
-
-        </script>
+        <div id="test">
+            test test
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
