--- a/projects/react-projects/index.html
+++ b/projects/react-projects/index.html
@@ -3,38 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Arthur Manceau</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>@armanceau's projects</h1>
+            <h1>React projects</h1>
         </header>
 
         <main>
-
             <div class="project-link">
-                <a href="/projects/frontendMentor/index.html" >Frontend Mentor</a>
+                <a href="/projects/react-projects/app1/public/index.html">App 1</a>
             </div>
-
+    
             <div class="project-link">
-                <a href="/projects/ws/index.html" class="project-link">WorldSkills</a>
+                <a href="/projects/others/bannière/index.html">Banner</a>
             </div>
-
+            
             <div class="project-link">
-                <a href="/projects/react-projects/index.html" class="project-link">React projects</a>
-            </div>
-
-            <div class="project-link">
-                <a href="/projects/others/index.html" class="project-link">Others</a>
+                <a href="/projects/others/darkMode/index.html">Dark Mode</a>
             </div>
         </main>
+
     </div>
 </body>
 </html>
