--- a/projects/frontendMentor/index.html
+++ b/projects/frontendMentor/index.html
@@ -18,40 +18,40 @@
         </header>
 
         <main>
-            <div class="project-link">
-                <a href="/projects/frontendMentor/newsletter-sign-up-with-success-message-main/index.html" >Newsletter Sign Up</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/newsletter-sign-up-with-success-message-main/index.html" >Newsletter Sign Up</a>
             </div>
     
-            <div class="project-link">
-                <a href="/projects/frontendMentor/product-preview-card-component-main/index.html">Product Preview Card</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/product-preview-card-component-main/index.html">Product Preview Card</a>
             </div>
             
-            <div class="project-link">
-                <a href="/projects/frontendMentor/qr-code-component-main/index.html">Qr Code</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/qr-code-component-main/index.html">Qr Code</a>
             </div>
 
-            <div class="project-link">
-                <a href="/projects/frontendMentor/results-summary-component/index.html">Resultat Summary</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/results-summary-component/index.html">Resultat Summary</a>
             </div>
 
-            <div class="project-link">
-                <a href="/projects/frontendMentor/nft-preview-card-component-main/index.html">Nft Preview</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/nft-preview-card-component-main/index.html">Nft Preview</a>
             </div>
 
-            <div class="project-link">
-                <a href="/projects/frontendMentor/profile-card-component-main/index.html">Profil Card</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/profile-card-component-main/index.html">Profil Card</a>
             </div>
 
-            <div class="project-link">
-                <a href="/projects/frontendMentor/time-tracking-dashboard-main/">Dashboard Time</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/time-tracking-dashboard-main/">Dashboard Time</a>
             </div>
 
-            <div class="project-link">
-                <a href="/projects/frontendMentor/order-summary-component-main/index.html">Order Summary</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/order-summary-component-main/index.html">Order Summary</a>
             </div>
 
-            <div class="project-link">
-                <a href="/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html">Countries API</a>
+            <div>
+                <a class="project-link" href="/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/index.html">Countries API</a>
             </div>
         </main>
 
