--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <link rel="shortcut icon" href="assets/img/Spaceship.webp" type="image/x-icon">
     <title>Arthur Manceau</title>
 </head>
@@ -118,7 +118,7 @@
                             </div>
 
                             <div class="user-card">
-                                <img class="img-profil" src="assets\img\arthur.webp" alt="My profil">
+                                <img class="img-profil" src="/assets/img/arthur.webp" alt="My profil">
                             </div>
 
                             <div class="general">
@@ -199,5 +199,5 @@
         </div>
     </div>    
 </body>
-<script src="script.js"></script>
+<script src="/assets/script.js"></script>
 </html>
