--- a/projects/ws/index.html
+++ b/projects/ws/index.html
@@ -20,14 +20,14 @@
         <div class="inner-header flex">
             <div class="container_">
                 <header>
-                    <div class="header-item title gap-2 d-flex align-items-center justify-content-start">
-                        <div class="title-emoji">
-
+                    <a href="/index.html" class="header-item title gap-2 d-flex align-items-center justify-content-start">
+                        <div class="gap-2 d-flex align-items-center justify-content-start">
+                            <div class="title-emoji"></div>
+                            <div>
+                                armanceau
+                            </div>
                         </div>
-                        <div>
-                            armanceau
-                        </div>
-                    </div>
+                    </a>
 
                     <div class="header-item item-social d-flex align-items-center justify-content-end">
                         <div class="social-btn" onclick="myFunction()">
