--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </a>
 
                     <div class="header-item item-social d-flex align-items-center justify-content-end">
-                        <div class="social-btn" onclick="myFunction()">
+                        <!-- <div class="social-btn" onclick="myFunction()">
                             <span class="social-btn-svgContainer">
                                 <span class="social-btn-svgContainer">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
@@ -40,7 +40,7 @@
                                     </span>
                                 <span class="social-btn-bg info"></span>
                             </span>
-                        </div>
+                        </div> -->
 
                         <div>
                             <a class="social-btn" href="https://github.com/armanceau" target="_blank">
@@ -87,6 +87,17 @@
                             </svg>                        
                         </a>
                     </div>
+
+                    <div>
+                        <a class="btn btn-outline-light btn-padding d-flex gap-3 align-items-center move-btn" href="/projects/reactnative/index.html">
+                            <div class="move-div">
+                                React Native
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right-circle-fill " viewBox="0 0 16 16">
+                                <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+                            </svg>                        
+                        </a>
+                    </div>
         
                     <div>
                         <a class="btn btn-outline-light btn-padding d-flex gap-3 align-items-center move-btn" href="/projects/symfony-project/index.html">
@@ -110,7 +121,7 @@
                         </a>
                     </div>
 
-                    <div class="popuptext" id="myPopup">
+                    <!-- <div class="popuptext" id="myPopup">
                         <div class="card">
 
                             <div class="close" onclick="myFunction()">
@@ -177,7 +188,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </main>
             </div>
         </div>
