--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenue sur la page personnelle d'Arthur Manceau, étudiant en développement web. Découvrez ses projets Frontend Mentor, WorldSkills, React Native, Symfony, et d'autres.">
     <meta name="author" content="Manceau Arthur">
+    <meta name="keywords" content="Arthur Manceau, Efrei Paris, Panthéon-Assas, développement web, étudiant, Frontend Mentor, WorldSkills, React Native, Symfony, projets web, HTML, CSS, JavaScript, Bootstrap">
 
     <meta property="og:title" content="Arthur Manceau">
     <meta property="og:description" content="Bienvenue sur la page personnelle d'Arthur Manceau, étudiant en développement web. Découvrez ses projets Frontend Mentor, WorldSkills, React Native, Symfony, et d'autres.">
