--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenue sur la page personnelle d'Arthur Manceau, étudiant en développement web. Découvrez ses projets Frontend Mentor, WorldSkills, React Native, Symfony, et d'autres.">
-    <meta name="author" content="Manceau Arthur">
+    <meta name='subject' content='Portfolio de Arthur Manceau'>
+    <meta name="author" content="Manceau Arthur, arthur.manceau1@outlook.fr">
+    <meta name="designer" content="Manceau Arthur, arthur.manceau1@outlook.fr">
+    <meta name='language' content='FR'>
     <meta name="keywords" content="Arthur Manceau, Efrei Paris, Panthéon-Assas, développement web, étudiant, Frontend Mentor, WorldSkills, React Native, Symfony, projets web, HTML, CSS, JavaScript, Bootstrap">
-
+    <meta name='url' content='https://armanceau.netlify.app/'>
+    <meta name='identifier-URL' content='https://armanceau.netlify.app/'>
+    <meta name='coverage' content='Worldwide'>
+    <meta name='distribution' content='Global'>
+    <meta name='rating' content='General'>
+    
     <meta property="og:title" content="Arthur Manceau">
     <meta property="og:description" content="Bienvenue sur la page personnelle d'Arthur Manceau, étudiant en développement web. Découvrez ses projets Frontend Mentor, WorldSkills, React Native, Symfony, et d'autres.">
     <meta property="og:image" content="assets/img/Spaceship.webp">
